# box_kernel

./: .gitignore  README.md  package.json
box_kernel/: setup.py
box_kernel/box_kernel/: __main__.py  images.py  install.py  kernel.py  pyproject.toml
box_kernel/box_kernel_stauffenbits.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: 1-vertical.box  1.box  3-horizontal-literal.box  3-space.box  655.box  nested.box  supplied-1.box  supplied-2.box  supplied-3.box  supplied-4.box
src/: Layout.js  box-parser.pegjs  box.js
test/: test.js
